--- a/test-web-svc.yaml
+++ b/test-web-svc.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-server-service
+  name: tomcat-server-service
   labels:
-    app: test-web
+    app: tomcat
   namespace: test
 spec:
   type: NodePort
   selector:
-    app: test-web
+    app: tomcat
   ports:
     - protocol: TCP
-      port: 8080
+      port: 8081
       targetPort: 8080
       nodePort: 30088
