--- a/test-web-deployment.yaml
+++ b/test-web-deployment.yaml
@@ -3,9 +3,9 @@ kind: Deployment
 metadata:
   name: tomcat-server
   labels:
-    app: tomcat
+    app: test-web
   annotations:
-    kubernetes.io/change-cause: version 8.7
+    kubernetes.io/change-cause: web-portal-docker:1.0.10
   namespace: test
 spec:
   progressDeadlineSeconds: 120
@@ -16,16 +16,16 @@ spec:
       maxSurge: 1
   selector:
     matchLabels:
-      app: tomcat
+      app: test-web
   template:
     metadata:
       name: tomcat-server
       labels:
-        app: tomcat
+        app: test-web
     spec:
       containers:
         - name: tomcat-server
-          image: tomcat:8.7
+          image: seoulbigdata-registry.ncr.gov-ntruss.com/web-portal-docker:1.0.10
           ports:
             - containerPort: 8080
           resources:
