--- a/test-web-deployment.yaml
+++ b/test-web-deployment.yaml
@@ -35,11 +35,11 @@ spec:
             initialDelaySeconds: 90
             periodSeconds: 10
             httpGet:
-              path: /
-              port: 30088
+              path: /health
+              port: 8080
           readinessProbe:
             initialDelaySeconds: 10
             periodSeconds: 5
             httpGet:
               path: /
-              port: 30088
+              port: 8080
