--- a/test-web-deployment.yaml
+++ b/test-web-deployment.yaml
@@ -35,7 +35,7 @@ spec:
             initialDelaySeconds: 90
             periodSeconds: 10
             httpGet:
-              path: /health
+              path: /bsp
               port: 8080
           readinessProbe:
             initialDelaySeconds: 10
