resecret test-web-deployment.yaml

--- a/test-web-deployment.yaml
+++ b/test-web-deployment.yaml
@@ -43,3 +43,5 @@ spec:
             httpGet:
               path: /bsp
               port: 8080
+      imagePullSecrets:
+        - name: regsecret
