--- a/test-web-deployment.yaml
+++ b/test-web-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     kubernetes.io/change-cause: web-portal-docker:1.0.11
   namespace: test
 spec:
+  replicas: 3
   progressDeadlineSeconds: 120
   strategy:
     type: RollingUpdate
