--- a/test-web-deployment.yaml
+++ b/test-web-deployment.yaml
@@ -10,18 +10,15 @@ metadata:
 spec:
   replicas: 3
   progressDeadlineSeconds: 120
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
   selector:
     matchLabels:
       app: test-web
+      color: blue
   template:
     metadata:
       labels:
         app: test-web
+        color: blue
     spec:
       containers:
         - name: tomcat-server
