--- a/rolling-update/test-web-svc.yaml
+++ b/rolling-update/test-web-svc.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    alb.ingress.kubernetes.io/healthcheck-path: /
   name: test-server-service
   labels:
     app: test
