--- a/test/test-deployment.yaml
+++ b/test/test-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mtv-dotnet-deployment
-  namespace: test
+  namespace: mtv-dotnet
   labels:
     app: mtv
   annotations:
