--- a/mtv-dotnet/service.yaml
+++ b/mtv-dotnet/service.yaml
@@ -2,17 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    alb.ingress.kubernetes.io/healthcheck-path: /
-  name: test-server-service
+    alb.ingress.kubernetes.io/healthcheck-path: /bsp/mtv
+  name: test-mtv-svc
   labels:
-    app: test
-  namespace: test
+    app: test-mtv
+  namespace: mtv-dotnet
 spec:
   type: NodePort
   selector:
-    app: test-web
+    app: test-mtv
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30088
+      port: 5000
+      targetPort: 5000
+      nodePort: 30089
