--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -21,13 +21,13 @@ spec:
   rules:
   - http:
      paths:
-     - path: /bsp/mtv
-       pathType: Prefix
-       backend:
-         service:
-            name: external-test-service
-            port: 
-               name: use-annotation
+#     - path: /bsp/mtv
+#       pathType: Prefix
+#       backend:
+#         service:
+#            name: external-test-service
+#            port: 
+#               name: use-annotation
      - path: /
        pathType: Prefix
        backend:
