--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -26,6 +26,8 @@ spec:
        backend:
          service:
             name: external-test-service
+            port: 
+               name: use-annotation
      - path: /
        pathType: Prefix
        backend:
