--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -11,8 +11,8 @@ metadata:
     alb.ingress.kubernetes.io/enable-sticky-session: 'true'
     alb.ingress.kubernetes.io/actions.test-server-svc: >
       {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-server-svc","servicePort":80,"weight":100}]}}
-    alb.ingress.kubernetes.io/actions.test-mtv-svc: >
-      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"mtv-dotnet.test-mtv-svc","servicePort":5000,"weight":100}]}}
+    alb.ingress.kubernetes.io/actions.external-test-service: >
+      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"external-test-service","weight":100}]}}
     alb.ingress.kubernetes.io/healthcheck-path: "/"
   labels:
     app: test-alb-ingress
@@ -25,7 +25,7 @@ spec:
        pathType: Prefix
        backend:
          service:
-            name: test-mtv-svc
+            name: external-test-service
             port: 
                name: use-annotation
      - path: /
