--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     alb.ingress.kubernetes.io/actions.test-server-svc: >
       {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-server-svc","servicePort":80,"weight":100}]}}
     alb.ingress.kubernetes.io/actions.external-test-service: >
-      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"external-test-service","servicePort":30090,"weight":100}]}}
+      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"external-test-service","servicePort":30090,"weight":100}]}}
     alb.ingress.kubernetes.io/healthcheck-path: "/"
   labels:
     app: test-alb-ingress
