--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -11,8 +11,8 @@ metadata:
     alb.ingress.kubernetes.io/enable-sticky-session: 'true'
     alb.ingress.kubernetes.io/actions.test-server-svc: >
       {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-server-svc","servicePort":80,"weight":100}],"enableStickySession":true}}
-    alb.ingress.kubernetes.io/actions.targets: >
-      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"external-test-service","servicePort":5000,"weight":100}],"enableStickySession":true}}
+#    alb.ingress.kubernetes.io/actions.targets: >
+#      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"external-test-service","servicePort":5000,"weight":100}],"enableStickySession":true}}
     alb.ingress.kubernetes.io/healthcheck-path: "/"
   labels:
     app: test-alb-ingress
@@ -25,9 +25,9 @@ spec:
        pathType: Prefix
        backend:
          service:
-            name: targets
+            name: external-test-service
             port: 
-               name: use-annotation
+               number: 30090
      - path: /
        pathType: Prefix
        backend:
