--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -11,8 +11,6 @@ metadata:
     alb.ingress.kubernetes.io/enable-sticky-session: 'true'
     alb.ingress.kubernetes.io/actions.test-server-svc: >
       {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-server-svc","servicePort":80,"weight":100}],"enableStickySession":true}}
-    alb.ingress.kubernetes.io/actions.test-mtv-svc.mtv-dotnet.svc.cluster.local: >
-      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-mtv-svc.mtv-dotnet.svc.cluster.local","servicePort":5000,"weight":100}],"enableStickySession":true}}
     alb.ingress.kubernetes.io/healthcheck-path: "/"
   labels:
     app: test-alb-ingress
@@ -25,9 +23,9 @@ spec:
        pathType: Prefix
        backend:
          service:
-            name: test-mtv-svc.mtv-dotnet.svc.cluster.local
+            name: test-mtv-proxy
             port: 
-              number: 5000
+              number: 8080
      - path: /
        pathType: Prefix
        backend:
