--- a/test/nls-elastic-svc.yaml
+++ b/test/nls-elastic-svc.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: nls-elastic-svc
+  namespace: test
   annotations:
     alb.ingress.kubernetes.io/healthcheck-path: /
-  name: test-server-svc
   labels:
-    app: test-web
-  namespace: test
+    app: nls-elastic
 spec:
   type: NodePort
   selector:
-    app: test-web
+    app: nls-elastic
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30088
+  - protocol: TCP
+    port: 9200
+    targetPort: 9200
+    nodePort: 30085
