--- a/test/test-web-ingress.yaml
+++ b/test/test-web-ingress.yaml
@@ -1,35 +1,29 @@
+# /bsp/mtv 경로 설정 추가
+# path 설정 순서가 우선순위로 지정되어 /bsp/mtv 경로가 /bsp 보다 상단에 위치해야함.
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: test-ingress
+  name: bigdata-test-ingress
   namespace: test
   annotations:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/description: 'test ALB ingress controller'
-    alb.ingress.kubernetes.io/load-balancer-name: 'test-alb'
+    alb.ingress.kubernetes.io/description: 'helm test ALB ingress controller'
+    alb.ingress.kubernetes.io/load-balancer-name: 'nls-test-alb'
     alb.ingress.kubernetes.io/load-balancer-size: 'medium'
-    alb.ingress.kubernetes.io/enable-sticky-session: 'true'
-    alb.ingress.kubernetes.io/actions.test-server-svc: >
-      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"test-server-svc","servicePort":80,"weight":100}],"enableStickySession":true}}
-    alb.ingress.kubernetes.io/healthcheck-path: "/"
+    alb.ingress.kubernetes.io/actions.nls-elastic-svc: >
+      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"nls-elastic-svc","servicePort":9200,"weight":100}],"enableStickySession":true}}
   labels:
-    app: test-alb-ingress
+    app: prod-alb-ingress
 spec:
   ingressClassName: alb
   rules:
   - http:
-     paths:
-     - path: /bsp/mtv
-       pathType: Prefix
-       backend:
-         service:
-            name: test-mtv-proxy
-            port: 
-              number: 8080
-     - path: /
-       pathType: Prefix
-       backend:
-         service:
-            name: test-server-svc
-            port: 
-               name: use-annotation
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+             name: nls-elastic-svc
+             port:
+                name: use-annotation
